# boursery

./: .gitignore  Cargo.toml  README.md
core-persistence/: Cargo.toml
core-persistence/src/: lib.rs
core-persistence/src/portfolio/: create_portfolio.rs  mod.rs
core/src/: lib.rs
core/src/portfolio/: create_portfolio.rs  dtos.rs  entities.rs  mod.rs
gui/: Cargo.toml
gui/src/: lib.rs
persistence/: Cargo.toml
persistence/src/: lib.rs
persistence/src/portfolio/: mod.rs
src/: main.rs
src/data/: mod.rs
