[package]
name = "bourse_advisor"
version = "0.1.0"
authors = ["Barogthor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
pretty_assertions = "1.2.1"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.0", features = ["full"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "^1.0"
chrono = "0.4.19"
#eframe = { git = "https://github.com/emilk/egui", version = "0.18.0" }
gui = { path = "gui" }
core = { path = "core" }
persistence = { path = "persistence" }